<dev> : 회원 인증 방식 (Token 방식으로 구현, Test 통과)
- 현재 RestController로 테스트시 토큰값 부여 및 검증 통과 완료

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,17 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+
+
+	/*
+	* jwt 의존성 추가
+	*  impl : 구현체는 JWT의 생성, 파싱, 검증 등의 작업을 처리하는 데 사용
+	*  jackson : Jackson은 Java 객체를 JSON으로 직렬화하거나 JSON을 Java 객체로 역직렬화하는 데 사용
+	*/
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+
 }
 
 tasks.named('test') {
