--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,8 @@ spring:
              enabled: true
 
     datasource:
-        url: jdbc:h2:mem:testdb
+#        url: jdbc:h2:mem:testdb
+        url: jdbc:h2:tcp://localhost/~/testdb
         driver-class-name: org.h2.Driver
         username: sa
         password:
