<dev> : LogBack 잠시 삭제 및  Security Local file 허용 설정완료

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,10 @@ spring:
     profiles:
         include: secret
 
+    output:
+      ansi:
+          enabled: always
+
 logging:
     level:
         son: debug
