--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,12 @@ dependencies {
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 
+	/*
+	* MY SQL
+	* */
+	runtimeOnly 'mysql:mysql-connector-java:8.0.32'
+
+
 }
 
 tasks.named('test') {
