--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,24 +1,28 @@
 spring:
 
-    h2:
-        console:
-             enabled: true
+#    h2:
+#        console:
+#             enabled: true
 
     datasource:
-#        url: jdbc:h2:mem:testdb
-        url: jdbc:h2:tcp://localhost/~/testdb
-        driver-class-name: org.h2.Driver
-        username: sa
-        password:
+#        url: jdbc:h2:tcp://localhost/~/testdb
+#        driver-class-name: org.h2.Driver
+#        username: sa
+#        password:
+        url: jdbc:mysql://localhost:3306/roomshare
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        username: root
+        password: test1234
 
     jpa:
-        database-platform: org.hibernate.dialect.H2Dialect
+#        database-platform: org.hibernate.dialect.H2Dialect
         hibernate:
-            ddl-auto: create
+            ddl-auto: update
         properties:
             hibernate:
                 format_sql: true
                 show_sql: true
+
     profiles:
         include: secret
 
