--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,12 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java:8.0.33'
 
 
+	/*
+	* QUERY DSL
+	* */
+	implementation 'com.querydsl:querydsl-jpa'
+	implementation 'com.querydsl:querydsl-apt'
+
 }
 
 tasks.named('test') {
