--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,8 +10,9 @@ spring:
 #        username: sa
 #        password:
 #        ?createDatabaseIfNotExist=true -> 존재 하지 않으면 생성
-        url: jdbc:mysql://localhost:3306/roomshare?createDatabaseIfNotExist=true
-        driver-class-name: com.mysql.cj.jdbc.Driver
+#        url: jdbc:mysql://localhost:3306/roomshare?createDatabaseIfNotExist=true
+        url: jdbc:mariadb://svc.sel4.cloudtype.app:30385/roomshare?createDatabaseIfNotExist=true
+#        driver-class-name: com.mysql.cj.jdbc.Driver
         username: root
         password: test1234
 
