--- a/build.gradle
+++ b/build.gradle
@@ -44,9 +44,9 @@ dependencies {
 	/*
 	* MY SQL
 	* */
-//	runtimeOnly 'mysql:mysql-connector-java:8.0.33'
+	runtimeOnly 'mysql:mysql-connector-java:8.0.33'
 
-	implementation 'org.mariadb.jdbc:mariadb-java-client:2.1.2'
+//	implementation 'org.mariadb.jdbc:mariadb-java-client:2.1.2'
 	/*
 	* QUERY DSL
 	* */
